--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  
   <meta charset="utf-8">
   <title>BookApp</title>
   <base href="/">
@@ -8,7 +11,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
